preparing for reccomendations

--- a/test_notebooks/test_data_flowershop.ipynb
+++ b/test_notebooks/test_data_flowershop.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,8 +387,16 @@
     "collection = db['products']\n",
     "# Find all documents in the collection\n",
     "documents = collection.find()\n",
+    "rose_id = 'WOuYvLGP7w'\n",
+    "bellflower_id = 'X8tcuAiPKf'\n",
+    "tulip_id = '0GUxcnNKTr'\n",
+    "lavender_id = 'UKoQtfX4un'\n",
+    "daisy_id = '9cQPkJ5fnG'\n",
+    "iris_id = 'fnT6pXzKP0'\n",
+    "ids_all = []\n",
     "for x in documents:\n",
-    "    print(x)\n",
+    "    # print(x)\n",
+    "    ids_all.append(x.get('id'))\n",
     "\n",
     "\n",
     "# print(len(documents))\n",
@@ -398,7 +406,486 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand_1 = np.random.randint(len(ids_all),size=[300,3])\n",
+    "rand_2 = np.random.randint(len(ids_all),size=[300,3])\n",
+    "rand_3 = np.random.randint(len(ids_all),size=[300,3])\n",
+    "rand_4 = np.random.randint(len(ids_all),size=[100,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_r_b = [[ids_all[num_m]for num_m in num] for num in rand_1]\n",
+    "orders_t_l = [[ids_all[num_m]for num_m in num] for num in rand_2]\n",
+    "orders_d_i = [[ids_all[num_m]for num_m in num] for num in rand_3]\n",
+    "orders_rand = [[ids_all[num_m]for num_m in num] for num in rand_4]\n",
+    "_=[ids.extend([rose_id,bellflower_id]) for ids in orders_r_b]\n",
+    "_=[ids.extend([tulip_id,lavender_id]) for ids in orders_t_l]\n",
+    "_=[ids.extend([daisy_id,iris_id]) for ids in orders_d_i]\n",
+    "all_orders = np.concatenate([orders_d_i,orders_r_b,orders_rand,orders_t_l])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quantites = np.random.randint(low=1,high=4,size=[1000,5])\n",
+    "order_quant = np.hstack([all_orders,quantites])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(order_quant).to_csv('orders.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from enum import Enum\n",
+    "from pydantic import BaseModel,Field\n",
+    "from typing import Optional,List\n",
+    "\n",
+    "class OrderStatus(Enum):\n",
+    "    \"\"\"\n",
+    "    Enumeration for representing all statuses an order can have.\n",
+    "\n",
+    "    Attributes:\n",
+    "        PENDING (str): Order has been created but not processed.\n",
+    "        PROCESSING (str): Order is being processed.\n",
+    "        PACKAGING (str): Order is being packaged.\n",
+    "        SHIPPED (str): Order has been shipped.\n",
+    "        DELIVERED (str): Order has been delivered.\n",
+    "        CANCELLED (str): Order has been cancelled.\n",
+    "        RETURNED (str): Order has been returned.\n",
+    "    \"\"\"\n",
+    "    PENDING = \"pending\"\n",
+    "    PROCESSING = \"processing\"\n",
+    "    PACKAGING = \"packaging\"\n",
+    "    SHIPPED = \"shipped\"\n",
+    "    DELIVERED = \"delivered\"\n",
+    "    CANCELLED = \"cancelled\"\n",
+    "    RETURNED = \"returned\"\n",
+    "\n",
+    "class OrderDb(BaseModel):\n",
+    "    cart_id: int\n",
+    "    user_id: int\n",
+    "    address_id: int\n",
+    "    date: str = Field(\n",
+    "        default_factory=lambda: datetime.now().strftime(\"%d-%m-%Y %H:%M:%S\"))\n",
+    "    status: str\n",
+    "    total_amount: float\n",
+    "\n",
+    "\n",
+    "class Address(BaseModel):\n",
+    "    id: Optional[int] = None\n",
+    "    name: str\n",
+    "    street: str\n",
+    "    city: str\n",
+    "    postal_code: str\n",
+    "\n",
+    "\n",
+    "class CartItem(BaseModel):\n",
+    "    product_id: str\n",
+    "    quantity: int\n",
+    "\n",
+    "\n",
+    "class Order(BaseModel):\n",
+    "    first_name: str\n",
+    "    last_name: str\n",
+    "    address: str\n",
+    "    city: str\n",
+    "    postal_code: str\n",
+    "    email: str\n",
+    "    payment_method: str\n",
+    "    user_id: int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None,\n",
+       " None]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "adres = Address(\n",
+    "    name=f\"Moriarty Wattson\",\n",
+    "    street=\"Baker's street\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"EC1A\",\n",
+    "\n",
+    ")\n",
+    "def add_order(adres:Address, user_id:int):\n",
+    "    response = requests.post(\"http://api:8000/addresses\",\n",
+    "                                json=adres.model_dump()).json()\n",
+    "    address_id = response.get('id')\n",
+    "\n",
+    "    response = requests.post(f\"http://api:8000/users/{user_id}\").json()\n",
+    "    if 'cart_id' not in response:\n",
+    "        response = requests.post(\n",
+    "            f\"http://api:8000/users/{user_id}/cart\", json={}).json()\n",
+    "        cart_id = response.get('id')\n",
+    "    else:\n",
+    "        cart_id = response.get('cart_id')\n",
+    "\n",
+    "    items = requests.get(\n",
+    "        f\"http://api:8000/carts/{cart_id}/items\").json()\n",
+    "    products = [\n",
+    "        requests.get(f\"http://api:8000/products/{item['product_id']}\").json()\n",
+    "        for item in items\n",
+    "    ]\n",
+    "\n",
+    "    total_amount = sum(item['quantity'] * product['price']\n",
+    "                       for item, product in zip(items, products))\n",
+    "    dborder = OrderDb(\n",
+    "        status=\"DELIVERED\",\n",
+    "        total_amount=total_amount,\n",
+    "        address_id=address_id,\n",
+    "        user_id=user_id,\n",
+    "        cart_id=cart_id,\n",
+    "    )\n",
+    "    print(dborder.model_dump())\n",
+    "    response = requests.post(\"http://api:8000/orders\",\n",
+    "                             json=dborder.model_dump())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +974,7 @@
        "  'is_enabled': True}]"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
