working displaying order in admin panel, and ps1 script for windows(NOT TESTED)

--- a/test_notebooks/test_data_flowershop.ipynb
+++ b/test_notebooks/test_data_flowershop.ipynb
@@ -349,16 +349,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "48"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,8 +395,8 @@
     "iris_id = 'fnT6pXzKP0'\n",
     "ids_all = []\n",
     "for x in documents:\n",
-    "    # print(x)\n",
-    "    ids_all.append(x.get('id'))\n",
+    "    print(x)\n",
+    "    # ids_all.append(x.get('id'))\n",
     "\n",
     "\n",
     "# print(len(documents))\n",
@@ -453,11 +453,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
     "pd.DataFrame(order_quant).to_csv('orders.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_orders = pd.read_csv('orders.csv')"
    ]
   },
   {
@@ -527,344 +536,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 237,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None,\n",
-       " None]"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "adres = Address(\n",
+    "adres1 = Address(\n",
     "    name=f\"Moriarty Wattson\",\n",
     "    street=\"Baker's street\",\n",
     "    city=\"London\",\n",
     "    postal_code=\"EC1A\",\n",
-    "\n",
     ")\n",
-    "def add_order(adres:Address, user_id:int):\n",
-    "    response = requests.post(\"http://api:8000/addresses\",\n",
+    "\n",
+    "adres2 = Address(\n",
+    "    name=\"Sherlock Holmes\",\n",
+    "    street=\"221B Baker Street\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"NW1\"\n",
+    ")\n",
+    "\n",
+    "adres3 = Address(\n",
+    "    name=\"John Watson\",\n",
+    "    street=\"221B Baker Street\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"NW1\"\n",
+    ")\n",
+    "\n",
+    "adres4 = Address(\n",
+    "    name=\"Irene Adler\",\n",
+    "    street=\"Briony Lodge\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"SW3\"\n",
+    ")\n",
+    "\n",
+    "adres5 = Address(\n",
+    "    name=\"Mycroft Holmes\",\n",
+    "    street=\"Pall Mall\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"SW1\"\n",
+    ")\n",
+    "\n",
+    "adres6 = Address(\n",
+    "    name=\"Mrs. Hudson\",\n",
+    "    street=\"221B Baker Street\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"NW1\"\n",
+    ")\n",
+    "\n",
+    "adres7 = Address(\n",
+    "    name=\"Professor Moriarty\",\n",
+    "    street=\"Upper Terrace\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"NW3\"\n",
+    ")\n",
+    "\n",
+    "adres8 = Address(\n",
+    "    name=\"Inspector Lestrade\",\n",
+    "    street=\"Scotland Yard\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"SW1A\"\n",
+    ")\n",
+    "\n",
+    "adres9 = Address(\n",
+    "    name=\"Mary Morstan\",\n",
+    "    street=\"Lyme Regis\",\n",
+    "    city=\"Dorset\",\n",
+    "    postal_code=\"DT7\"\n",
+    ")\n",
+    "\n",
+    "adres10 = Address(\n",
+    "    name=\"Gregson\",\n",
+    "    street=\"Whitehall\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"SW1A\"\n",
+    ")\n",
+    "\n",
+    "adres11 = Address(\n",
+    "    name=\"Athelney Jones\",\n",
+    "    street=\"Grange Road\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"SE1\"\n",
+    ")\n",
+    "\n",
+    "adres12 = Address(\n",
+    "    name=\"Stamford\",\n",
+    "    street=\"Bart's Hospital\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"EC1A\"\n",
+    ")\n",
+    "\n",
+    "adres13 = Address(\n",
+    "    name=\"Billy\",\n",
+    "    street=\"221B Baker Street\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"NW1\"\n",
+    ")\n",
+    "\n",
+    "adres14 = Address(\n",
+    "    name=\"Violet Hunter\",\n",
+    "    street=\"Winchester\",\n",
+    "    city=\"Hampshire\",\n",
+    "    postal_code=\"SO23\"\n",
+    ")\n",
+    "\n",
+    "adres15 = Address(\n",
+    "    name=\"James Ryder\",\n",
+    "    street=\"Covent Garden\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"WC2\"\n",
+    ")\n",
+    "\n",
+    "adres16 = Address(\n",
+    "    name=\"Reginald Musgrave\",\n",
+    "    street=\"Hurlstone\",\n",
+    "    city=\"Sussex\",\n",
+    "    postal_code=\"BN7\"\n",
+    ")\n",
+    "\n",
+    "adres17 = Address(\n",
+    "    name=\"Arthur Cadogan\",\n",
+    "    street=\"Aldgate\",\n",
+    "    city=\"London\",\n",
+    "    postal_code=\"EC3\"\n",
+    ")\n",
+    "\n",
+    "addresses = [adres1,adres2,adres3,adres4,adres5,adres6,adres7,adres8,adres9,adres10,adres11,adres12,adres13,adres14,adres15,adres16,adres17]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Dict\n",
+    "from datetime import datetime\n",
+    "\n",
+    "base_url = \"127.0.0.1:8000\"\n",
+    "def add_order(adres:Address, user_id:int, items: Dict):\n",
+    "\n",
+    "    check_cart = requests.get(f\"http://{base_url}/users/{user_id}/cart\")\n",
+    "    for flower,quantity in items.items():\n",
+    "        if check_cart.status_code == 404:\n",
+    "            create_cart = requests.post(f\"http://{base_url}/users/{user_id}/cart\", json={})\n",
+    "            add_product = requests.post(f\"http://{base_url}/users/{user_id}/cart/items\", json={\"product_id\": flower, \"quantity\": quantity})\n",
+    "        else:\n",
+    "            add_product = requests.post(f\"http://{base_url}/users/{user_id}/cart/items\", json={\"product_id\": flower, \"quantity\": quantity})\n",
+    "\n",
+    "    response = requests.post(f\"http://{base_url}/addresses\",\n",
     "                                json=adres.model_dump()).json()\n",
     "    address_id = response.get('id')\n",
     "\n",
-    "    response = requests.post(f\"http://api:8000/users/{user_id}\").json()\n",
+    "    response = requests.post(f\"http://{base_url}/users/{user_id}\").json()\n",
     "    if 'cart_id' not in response:\n",
     "        response = requests.post(\n",
-    "            f\"http://api:8000/users/{user_id}/cart\", json={}).json()\n",
+    "            f\"http://{base_url}/users/{user_id}/cart\", json={}).json()\n",
     "        cart_id = response.get('id')\n",
     "    else:\n",
     "        cart_id = response.get('cart_id')\n",
     "\n",
     "    items = requests.get(\n",
-    "        f\"http://api:8000/carts/{cart_id}/items\").json()\n",
+    "        f\"http://{base_url}/carts/{cart_id}/items\").json()\n",
     "    products = [\n",
-    "        requests.get(f\"http://api:8000/products/{item['product_id']}\").json()\n",
+    "        requests.get(f\"http://{base_url}/products/{item['product_id']}\").json()\n",
     "        for item in items\n",
     "    ]\n",
     "\n",
@@ -878,10 +711,45 @@
     "        cart_id=cart_id,\n",
     "    )\n",
     "    print(dborder.model_dump())\n",
-    "    response = requests.post(\"http://api:8000/orders\",\n",
+    "    response = requests.post(f\"http://{base_url}/orders\",\n",
     "                             json=dborder.model_dump())\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for order in df_orders.iterrows():\n",
+    "    order_dict = {order[1].values[1] : order[1].values[6],\n",
+    "                  order[1].values[2] : order[1].values[7],\n",
+    "                  order[1].values[3] : order[1].values[8],\n",
+    "                  order[1].values[4] : order[1].values[9],\n",
+    "                  order[1].values[5] : order[1].values[10]}\n",
+    "    user_id = np.random.randint(low=1,high=17)\n",
+    "    adres = addresses[user_id]\n",
+    "    add_order(adres,user_id,order_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Address(id=None, name='Mrs. Hudson', street='221B Baker Street', city='London', postal_code='NW1')"
+      ]
+     },
+     "execution_count": 266,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
